@@ -178,7 +178,7 @@ HB_FUNC_EXTERN( HB_QBLUETOOTHADDRESS );
 HB_FUNC_EXTERN( HB_QBLUETOOTHSERVICEINFO );
 HB_FUNC_EXTERN( HB_QBLUETOOTHTRANSFERREPLY );
 
-void _hbqtgui_force_link_for_event( void )
+void _hbqtbluetooth_force_link_for_event( void )
 {
    HB_FUNC_EXEC( HB_QBLUETOOTHDEVICEINFO );
    HB_FUNC_EXEC( HB_QBLUETOOTHADDRESS );
